--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,15 @@ a {
   transition: var(--transition);
 }
 .display {
-  display: block;
+  display: none;
+}
+@media (min-width: 768px) {
+  .display {
+    display: flex;
+  }
 }
 p {
-  color: #545b6b;
+  color: #777;
   font-family: Arial;
   font-size: 15px;
   padding: 10px 5px;
@@ -153,9 +158,90 @@ header nav .toggle-menu {
     top: 100%;
     flex-direction: column;
     background-color: rgb(0 0 0 / 50%);
-    display: none;
   }
   header nav ul li a {
     padding: 15px !important;
+  }
+}
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+Home
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.home {
+  min-height: 100vh;
+  background-color: #1f2021;
+  background-image: url(../img/landing.jpg);
+  position: relative;
+}
+.home .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 60%);
+  left: 0;
+  top: 0;
+}
+.home .box {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  left: 0;
+  width: 50%;
+  background-color: var(--transparent-color);
+  padding: 50px;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+}
+.home .content {
+  max-width: 500px;
+}
+.home .change-background {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #ddd;
+  padding: 15px 23px;
+  border-radius: 50%;
+}
+.home .change-background:hover {
+  background-color: rgb(0 0 0 / 50%);
+  color: var(--main-color);
+}
+.home .fa-angle-left {
+  left: 30px;
+}
+.home .fa-angle-right {
+  right: 30px;
+}
+.home .bullets li {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+.home .bullets {
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  bottom: 30px;
+  transform: translateX(-50%);
+  left: 50%;
+}
+.home .bullets li.active {
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+}
+@media (max-width: 767px) {
+  .home .box {
+    width: 100%;
+  }
+  .home .box .content {
+    max-width: 100%;
+  }
+  .home .fa-angle-left {
+    left: 5px;
+  }
+  .home .fa-angle-right {
+    right: 5px;
   }
 }
