--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ General
   --main-color: #0599c2;
   --transparent-color: rgb(15 116 143 / 70%);
   --section-padding: 100px;
-  --transition: all 0.5s ease-in-out;
+  --transition: all 0.8s ease-in-out;
 }
 html {
   scroll-behavior: smooth;
@@ -376,4 +376,69 @@ Design
   .design .box {
     width: 100%;
   }
+}
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+portfolio
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.portfolio {
+  position: relative;
+  background-color: #fff;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.portfolio .container ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+.portfolio .container ul li {
+  padding: 15px;
+  cursor: pointer;
+}
+.portfolio .container ul li:hover {
+  background-color: #ddd;
+  color: #0599c2;
+}
+.portfolio ul li.active,
+.portfolio ul li.active:hover {
+  background-color: var(--main-color);
+  color: #fff;
+}
+.portfolio .img-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 50px;
+}
+.portfolio .img-container img {
+  width: 100%;
+  transition: var(--transition);
+}
+.portfolio .img-container .box {
+  position: relative;
+  overflow: hidden;
+  transition: var(--transition);
+}
+
+.portfolio .img-container .info {
+  position: absolute;
+  background-color: rgb(0 0 0 / 60%);
+  width: 100%;
+  color: #fff;
+  border-radius: 1rem 1rem 0 0;
+  text-align: center;
+  transition: var(--transition);
+  padding: 20px;
+  bottom: -100%;
+}
+.portfolio .img-container .info p {
+  color: var(--main-color);
+}
+.portfolio .img-container .box:hover .info {
+  bottom: 0px;
+}
+.portfolio .img-container .box:hover img {
+  transform: rotate(10deg) scale(1.5, 1.5);
 }
