--- a/css/style.css
+++ b/css/style.css
@@ -442,3 +442,45 @@ portfolio
 .portfolio .img-container .box:hover img {
   transform: rotate(10deg) scale(1.5, 1.5);
 }
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+video
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.video {
+  position: relative;
+}
+.video video {
+  max-width: 100%;
+  aspect-ratio: auto;
+}
+.video::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.video .box {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  background-color: var(--transparent-color);
+  top: 50%;
+  padding: 50px;
+  z-index: 2;
+  transform: translateY(-50%);
+  color: #fff;
+}
+
+.video .box button {
+  border: none;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.59);
+  color: #ddd;
+  text-transform: uppercase;
+}
+.video .box button:hover {
+  background-color: #000;
+}
