--- a/css/style.css
+++ b/css/style.css
@@ -484,3 +484,25 @@ video
 .video .box button:hover {
   background-color: #000;
 }
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+About
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.about {
+  position: relative;
+  padding-top: var(--section-padding);
+  overflow: hidden;
+  background-color: #000;
+  text-align: center;
+}
+.about img {
+  position: relative;
+  bottom: -120px;
+  margin-top: -130px;
+  max-width: 100%;
+}
+@media (max-width: 767px) {
+  .about img {
+    bottom: -60px;
+    margin-top: -60px;
+  }
+}
