--- a/css/style.css
+++ b/css/style.css
@@ -506,3 +506,56 @@ About
     margin-top: -60px;
   }
 }
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+Statistics
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.Statistics {
+  position: relative;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-image: url("../img/stats.png");
+  background-size: cover;
+}
+.Statistics::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.Statistics .container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-self: center;
+  gap: 50px;
+  z-index: 2;
+  background-color: var(--transparent-color);
+}
+.Statistics .box {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+}
+.Statistics .box i {
+  padding: 15px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 18px;
+  align-self: center;
+}
+.Statistics .box .number {
+  color: #fff;
+  font-size: 50px;
+  font-weight: bold;
+}
+.Statistics .box p {
+  color: #ddd;
+}
