--- a/css/style.css
+++ b/css/style.css
@@ -559,3 +559,180 @@ Statistics
 .Statistics .box p {
   color: #ddd;
 }
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+our-skills
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.our-skills {
+  position: relative;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+.our-skills .container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.our-skills .container > div {
+  flex-basis: 45%;
+}
+.our-skills .container > div > h3 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #777;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.our-skills .container > div > p {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.our-skills .testimonials .box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 70px;
+  border-width: 10%;
+  margin-bottom: 20px;
+}
+.our-skills .testimonials .box .text {
+  border-bottom: 1px solid #ccc;
+  font-size: 15px;
+  color: var(--main-color);
+}
+.our-skills .testimonials .box .text > p {
+  text-align: end;
+  margin: 10px 0;
+  color: #777;
+  font-size: 14px;
+}
+.our-skills .testimonials .box img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.our-skills .testimonials .bullets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+.our-skills .testimonials .bullets li {
+  border: 1px solid #aaa;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+}
+.our-skills .testimonials .bullets li.active,
+.our-skills .testimonials .bullets li.active:hover {
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+}
+.our-skills .testimonials .bullets li:hover {
+  background-color: #777;
+}
+@media (max-width: 768px) {
+  .our-skills .container > div {
+    flex-basis: 100%;
+  }
+  .our-skills .testimonials .box {
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+  }
+}
+.our-skills .skills .prog-holder {
+  margin-bottom: 30px;
+}
+.our-skills .skills .prog-holder h4 {
+  color: #1f2021;
+  margin-bottom: 5px;
+  font-weight: 400px;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.our-skills .skills .prog-holder .prog {
+  background-color: #dedadc;
+  width: 100%;
+  height: 18px;
+  position: relative;
+}
+.our-skills .skills .prog-holder .prog span {
+  background-color: var(--transparent-color);
+  display: block;
+  height: 100%;
+  position: relative;
+}
+.our-skills .skills .prog-holder .prog span::before {
+  content: attr(data-progress);
+  position: absolute;
+  background-color: #000;
+  color: #fff;
+  top: -40px;
+  right: -18px;
+  padding: 5px;
+  border-radius: 5px;
+}
+.our-skills .skills .prog-holder .prog span::after {
+  content: "";
+  position: absolute;
+  border-color: #000 transparent transparent transparent;
+  border-width: 8px;
+  border-style: solid;
+  top: -12px;
+  right: -7px;
+}
+/*ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ
+quote
+ــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ*/
+.quote {
+  position: relative;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-image: url("../img/quote.jpg");
+  background-size: cover;
+  text-align: center;
+}
+.quote::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgb(0 0 0 /80%);
+}
+.quote .container {
+  position: relative;
+}
+.quote q {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 20px;
+  position: relative;
+  color: var(--main-color);
+  font-weight: bold;
+}
+.quote q::before {
+  position: absolute;
+  content: "\f10d";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #aaa;
+  transform: translateX(-25px);
+}
+.quote q::after {
+  position: absolute;
+  content: "\f10d";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #aaa;
+  transform: translateX(15px) rotate(180deg);
+}
+.quote span {
+  color: #777;
+  display: block;
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: bold;
+}
